###### TWE 4.8-1 RELEASED ######
2012-10-02 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Email configuration section for each manual activity (used with SMTPEventAuditManager). Nice GUI and XPDL validation.
   # Added new actions to start and stop design time XPDL validation (useful to stop it when dealing with big XPDLs)
   # Enhanced XMLMultiLineTextPanelWithChoiceButton and XMLMultiLineHighlightPanelWithChoiceButton GUI controls
   # Improved ProblemsNavigator
   
2012-10-02 Sasa Bojanic <sasaboy@together.at>
   # Shark mode: Support for SESSION_HANDLE, SHARK_VERSION, SHARK_RELEASE, SHARK_BUILDID variables
   # Shark mode: Support for DYNAMICSCRIPT attribute for variables

###### TWE 4.7-1 RELEASED ######
2012-09-28 Sasa Bojanic <sasaboy@together.at>
   # Shark configuration: now graph component is not showing grid and not showing transition conditions by default

2012-09-15 Sasa Bojanic <sasaboy@together.at>
   # Improved XPDL icon

###### TWE 4.6-1 RELEASED ######
2012-08-15 Sasa Bojanic <sasaboy@together.at>
   # Start menu/desktop/taskbar icons improved

2012-07-30 Sasa Bojanic <sasaboy@together.at>
   # TWE Desktop icon now has short name

2012-07-26 Sasa Bojanic <sasaboy@together.at>
   # Max JVM memory in run scripts/shortcuts increased from 128M to 512M
   
2012-07-23 Sasa Bojanic <sasaboy@together.at>
   # Documentation: chapter Build Guide put at the end (before Release Notes)
   # Windows Installation:
      - Fixed: Size information in Control Panel
      - Added: Pin to taskbar option
      - Changed: Build ID information in Control Panel

2012-06-13 Sasa Bojanic <sasaboy@together.at>
   # changes related to linux builds with TAB

2012-05-29 Sasa Bojanic <sasaboy@together.at>
   # Modified NSIS script to use windows' "cacls.exe" to change access controls to allow everyone to writte into installation's config folder