@@ -10095,6 +10095,16 @@ sign.alias=pvktmp:3852567a-45er-567y-w456-23456789sdft</programlisting>Sign
         </listitem>
 
         <listitem>
+          <para>Shark mode: Improved validation. Now when validating special
+          extended attributes (for client GUI forms and for
+          SMTPEventAuditManager), "NON_EXISTING_VARIABLE_REFERENCE" ERRORS are
+          considered WARNINGS if there is an extended attribute at
+          WorkflowProcess/Package level that allows undefined variables
+          (Formal/Actual parameter matching validation still considers such
+          cases an ERROR cases)</para>
+        </listitem>
+
+        <listitem>
           <para>Added new actions to start and stop design time XPDL
           validation (useful to stop it when dealing with big XPDLs)</para>
         </listitem>
