@@ -32,6 +32,7 @@ ERROR_MANUAL_START_MODE_FOR_TOOL_ACTIVITY_WITH_SYSTEM_PARTICIPANT_PERFORMER='MAN
 ERROR_SYSTEM_PARTICIPANT_PERFORMER_FOR_NO_IMPLEMENTATION_ACTIVITY=System participant performer defined for Manual ('No implementation') activity
 
 WARNING_TOOL_AGENT_CLASS_NOT_DEFINED=Tool agent class attribute is not defined
+WARNING_NON_EXISTING_VARIABLE_REFERENCE=Possibly non existing variable reference (might be an undefined variable)
 
 ToolAgentClassKey=Tool agent
 ApplicationNameKey=Application name
