@@ -25,6 +25,7 @@
 #Missing translation -> ERROR_SYSTEM_PARTICIPANT_PERFORMER_FOR_NO_IMPLEMENTATION_ACTIVITY=System participant performer defined for Manual ('No implementation') activity
 
 #Missing translation -> WARNING_TOOL_AGENT_CLASS_NOT_DEFINED=Tool agent class attribute is not defined
+#Missing translation -> WARNING_NON_EXISTING_VARIABLE_REFERENCE=Possibly non existing variable reference (might be an undefined variable)
 
 #Missing translation -> ToolAgentClassKey=Tool agent
 #Missing translation -> ApplicationNameKey=Application name
