@@ -25,6 +25,7 @@ ERROR_MANUAL_START_MODE_FOR_TOOL_ACTIVITY_WITH_SYSTEM_PARTICIPANT_PERFORMER='MAN
 ERROR_SYSTEM_PARTICIPANT_PERFORMER_FOR_NO_IMPLEMENTATION_ACTIVITY=Sistemski u\u010Desnik definisan kao izvr\u0161ilac za manualnu ('No implementation') aktivnost
 
 WARNING_TOOL_AGENT_CLASS_NOT_DEFINED=Atribut za tool agent klasu nije definisan
+WARNING_NON_EXISTING_VARIABLE_REFERENCE=Potencijalno nepostoje\u0107a referenca ka promenjivoj (mo\u017Eda je u pitanju nedefinisana promenljiva)
 
 ToolAgentClassKey=Tool agent
 ApplicationNameKey=Ime aplikacije
